compiler/e2e/test/snapshot/borrow_checker/polinius_one_example/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mutable access is done while it is borrowed
   ╭─ compiler/e2e/test/snapshot/borrow_checker/polinius_one_example/main.pnx:17:5
   │
10 │     let mut q = &y  # Loan L1, borrowing `y`
   │                 -- the borrow starts here
   ·
17 │     y += 1          # (D) Mutate `y` -- is this ok?
   │     ^^^^^^ mutable access occurs here
18 │     consume(*p)     # use `p` again here
   │             -- the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
